tests/errors/_questions/preprocessor/incorrect/include/redef/main.c
#define KEK 1 #define KE 1

#define K #define KE 1 #include "temp.c"
K
KE

int main ()
{
	return 0;
}
